--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Set AWS region
+      run: echo "AWS_DEFAULT_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
+
     - name: Log in to Amazon ECR
       id: ecr_login
       uses: aws-actions/amazon-ecr-login@v1
       with:
-        region: ap-south-1
+        registry-type: AmazonECR
 
     - name: Build, tag, and push Docker image
       run: |
